[package]
name = "convert-to-chrome-trace"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trace_span = { path="../trace_span" }

serde = { version="1", features=["derive"] }
serde_json = "1"
clap = "2.33"
